2007-09-21  Stephen Compall <s11@member.fsf.org>

	* makeinfo/makeinfo.c (convert_from_file): excise code testing
	case in suffixes that doesn't arise.

2007-09-21  Karl Berry  <karl@gnu.org>

	* makeinfo/makeinfo.c,
	* info/info.c,
	* util/texindex.c,
	* util/install-info.c (main): unify declaration on char *argv[].

2007-09-20  Greg Schafer <gschafer@zip.com.au>  (tiny change)

	* util/dvipdf.test,
	* util/texi2dvi.test (required): need tex, or the tests fail.

2007-09-17  Karl Berry  <karl@gnu.org>

	* util/defs.in (TEXI2DVI_run): try "type" instead of "which".
	Report from Michael Deutschmann, 13 Sep 2007 01:29:39.

	* util/defs.in (optionset_get): use `...`, not $(...).  Still too
	newfangled.  Report from Bert Deknuydt.

2007-09-16  Thien-Thi Nguyen  <ttn@gnuvola.org>  (tiny change)

	* doc/texinfo.tex (w): Do s/indenting manual/manual indenting/.

2007-09-15  Karl Berry  <karl@gnu.org>

	* makeinfo/makeinfo.h,
	* makeinfo/makeinfo.c,
	* makeinfo/defun.c,
	* makeinfo/html.c,
	* makeinfo/node.c,
	* makeinfo/toc.c,
	* makeinfo/xref.c (__): rename to gdt, since HP-UX uses it in
	<stdsyms.h>.  (Report from Bert Deknuydt, 12 Sep 2007 12:17:34).

2007-09-09  Karl Berry  <karl@gnu.org>

	* Version 4.11.

2007-09-05  Karl Berry  <karl@gnu.org>

	* doc/info-stnd.texi (Variables): make an anchor for
	scroll-behavior, and use it.  Idea from Benno Schulenberg,
	04 Sep 2007 00:21:01.

2007-09-03  Karl Berry  <karl@gnu.org>

	* pretest 4.9.92.

	* doc/texinfo.tex (\baselinefactor): new macro, 1 by default.
	(\setleading): use it, to allow for poor man's double spacing.
	(\afourpaper, \letterpaper): use absolute dimension for height,
	instead of a multiple of \baselineskip.  (Otherwise things run off
	the bottom when double-spacing.)

2007-09-01  Juan Manuel Guerrero  <juan.guerrero@gmx.de>

	* djgpp/config.bat: change file names arguments and configure.orig
	to args and configure.org.
	Remove the command line that deletes co*.tmp files.
